--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint --ext .ts,.tsx src"
   },
   "dependencies": {
+    "immer": "^9.0.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
